--- a/Utils/Utils.vcxproj
+++ b/Utils/Utils.vcxproj
@@ -88,6 +88,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Log.h" />
     <ClInclude Include="src\FileException.h" />
     <ClInclude Include="src\PropertyException.h" />
     <ClInclude Include="src\SpecializedException.h" />
@@ -101,6 +102,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="src\Log.cpp" />
     <ClCompile Include="src\FileException.cpp" />
     <ClCompile Include="src\PropertyException.cpp" />
     <ClCompile Include="src\SpecializedException.cpp" />
