--- a/Utils/Utils.vcxproj
+++ b/Utils/Utils.vcxproj
@@ -88,7 +88,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Log.h" />
+    <ClInclude Include="src\Logger.h" />
     <ClInclude Include="src\FileException.h" />
     <ClInclude Include="src\PropertyException.h" />
     <ClInclude Include="src\SpecializedException.h" />
@@ -99,10 +99,11 @@
     <ClInclude Include="src\Properties.h" />
     <ClInclude Include="src\StringUtils.h" />
     <ClInclude Include="Stdafx.h" />
+    <ClInclude Include="src\Timer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
-    <ClCompile Include="src\Log.cpp" />
+    <ClCompile Include="src\Logger.cpp" />
     <ClCompile Include="src\FileException.cpp" />
     <ClCompile Include="src\PropertyException.cpp" />
     <ClCompile Include="src\SpecializedException.cpp" />
@@ -115,6 +116,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="src\Timer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.ico" />
