--- a/Utils/Utils.vcxproj
+++ b/Utils/Utils.vcxproj
@@ -90,6 +90,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Singleton.h" />
     <ClInclude Include="src\Lang.h" />
     <ClInclude Include="src\Logger.h" />
     <ClInclude Include="src\FileException.h" />
@@ -106,6 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="src\Singleton.cpp" />
     <ClCompile Include="src\Lang.cpp" />
     <ClCompile Include="src\Logger.cpp" />
     <ClCompile Include="src\FileException.cpp" />
