Added comments support in property files. File and property exceptions now inherit from std::exception

--- a/Utils/Utils.vcxproj
+++ b/Utils/Utils.vcxproj
@@ -91,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Singleton.h" />
+    <ClInclude Include="src\Singleton.h" />
     <ClInclude Include="src\Lang.h" />
     <ClInclude Include="src\Logger.h" />
     <ClInclude Include="src\FileException.h" />
@@ -107,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="src\Singleton.cpp" />
     <ClCompile Include="src\Singleton.cpp" />
     <ClCompile Include="src\Lang.cpp" />
     <ClCompile Include="src\Logger.cpp" />
