--- a/Utils/Utils.vcxproj
+++ b/Utils/Utils.vcxproj
@@ -95,7 +95,7 @@
     <ClInclude Include="src\Logger.h" />
     <ClInclude Include="src\FileException.h" />
     <ClInclude Include="src\PropertyException.h" />
-    <ClInclude Include="src\SpecializedException.h" />
+    <ClInclude Include="src\Exception.h" />
     <ClInclude Include="src\FileHandler.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\Goemetry.h" />
@@ -112,7 +112,7 @@
     <ClCompile Include="src\Logger.cpp" />
     <ClCompile Include="src\FileException.cpp" />
     <ClCompile Include="src\PropertyException.cpp" />
-    <ClCompile Include="src\SpecializedException.cpp" />
+    <ClCompile Include="src\Exception.cpp" />
     <ClCompile Include="src\FileHandler.cpp" />
     <ClCompile Include="src\Goemetry.cpp" />
     <ClCompile Include="src\Properties.cpp" />
