Fixed FileUtils list_files()

--- a/Utils/Utils.vcxproj
+++ b/Utils/Utils.vcxproj
@@ -80,6 +80,7 @@
       </PrecompiledHeader>
       <AdditionalUsingDirectories>
       </AdditionalUsingDirectories>
+      <PrecompiledHeaderFile />
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
