--- a/TestUtils/TestUtils.vcxproj
+++ b/TestUtils/TestUtils.vcxproj
@@ -91,6 +91,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="TestStringUtils.cpp" />
     <ClCompile Include="TestFileUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
