Review of the Exception class

--- a/Utils/Utils.vcxproj
+++ b/Utils/Utils.vcxproj
@@ -98,13 +98,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\exception\PropertyException.h" />
     <ClInclude Include="src\FileUtils.h" />
     <ClInclude Include="src\Singleton.h" />
     <ClInclude Include="src\Lang.h" />
     <ClInclude Include="src\Logger.h" />
-    <ClInclude Include="src\FileException.h" />
-    <ClInclude Include="src\PropertyException.h" />
-    <ClInclude Include="src\Exception.h" />
+    <ClInclude Include="src\exception\FileException.h" />
+    <ClInclude Include="src\exception\ConfigException.h" />
+    <ClInclude Include="src\exception\Exception.h" />
     <ClInclude Include="src\FileHandler.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="src\Goemetry.h" />
@@ -115,13 +116,14 @@
     <ClInclude Include="src\Utils.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\exception\PropertyException.cpp" />
     <ClCompile Include="src\FileUtils.cpp" />
     <ClCompile Include="src\Singleton.cpp" />
     <ClCompile Include="src\Lang.cpp" />
     <ClCompile Include="src\Logger.cpp" />
-    <ClCompile Include="src\FileException.cpp" />
-    <ClCompile Include="src\PropertyException.cpp" />
-    <ClCompile Include="src\Exception.cpp" />
+    <ClCompile Include="src\exception\FileException.cpp" />
+    <ClCompile Include="src\exception\ConfigException.cpp" />
+    <ClCompile Include="src\exception\Exception.cpp" />
     <ClCompile Include="src\FileHandler.cpp" />
     <ClCompile Include="src\Goemetry.cpp" />
     <ClCompile Include="src\Properties.cpp" />
