Using enum file_type instead of const int types

--- a/Utils/Utils.vcxproj
+++ b/Utils/Utils.vcxproj
@@ -47,13 +47,13 @@
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)$(SolutionName)\lib\$(Configuration)\</OutDir>
     <IncludePath>.\include;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\URemoteServer\URemoteServer\lib\$(Configuration);$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)lib\$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)$(SolutionName)\lib\$(Configuration)\</OutDir>
     <IncludePath>.\include;$(IncludePath)</IncludePath>
-    <LibraryPath>..\..\URemoteServer\URemoteServer\lib\$(Configuration);$(LibraryPath)</LibraryPath>
+    <LibraryPath>$(SolutionDir)lib\$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
