--- a/Utils/Utils.cbp
+++ b/Utils/Utils.cbp
@@ -4,13 +4,13 @@
 	<Project>
 		<Option title="Utils" />
 		<Option pch_mode="2" />
-		<Option compiler="msvc10" />
+		<Option compiler="clang" />
 		<Build>
 			<Target title="Debug Win32">
-				<Option output="libUtils" prefix_auto="1" extension_auto="1" />
+				<Option output="Utils" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option type="2" />
-				<Option compiler="msvc10" />
+				<Option compiler="clang" />
 				<Option createDefFile="1" />
 				<Compiler>
 					<Add option="-DWIN32" />
@@ -22,10 +22,10 @@
 				</Linker>
 			</Target>
 			<Target title="Release Win32">
-				<Option output="libUtils" prefix_auto="1" extension_auto="1" />
+				<Option output="Utils" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option type="2" />
-				<Option compiler="msvc10" />
+				<Option compiler="clang" />
 				<Option createDefFile="1" />
 				<Compiler>
 					<Add option="-DWIN32" />
@@ -48,10 +48,6 @@
 			<Add directory="C:/Program Files (x86)/Microsoft Visual Studio 11.0/VC/lib" />
 		</Linker>
 		<Unit filename="ReadMe.txt" />
-		<Unit filename="app.ico" />
-		<Unit filename="app.rc">
-			<Option compilerVar="WINDRES" />
-		</Unit>
 		<Unit filename="resource.h" />
 		<Unit filename="src/Goemetry.cpp" />
 		<Unit filename="src/Goemetry.h" />
