--- a/Utils/Utils.cbp
+++ b/Utils/Utils.cbp
@@ -10,9 +10,10 @@
 				<Option output="Utils" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option type="2" />
-				<Option compiler="clang" />
+				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
+					<Add option="-std=c++11" />
 					<Add option="-DWIN32" />
 					<Add option="-D_DEBUG" />
 				</Compiler>
