--- a/Utils/Utils.vcxproj
+++ b/Utils/Utils.vcxproj
@@ -116,7 +116,7 @@
     <ClInclude Include="src\Goemetry.h" />
     <ClInclude Include="src\Properties.h" />
     <ClInclude Include="src\string_utils.h" />
-    <ClInclude Include="src\Timer.h" />
+    <ClInclude Include="src\timer.h" />
     <ClInclude Include="src\Translator.h" />
     <ClInclude Include="src\Utils.h" />
   </ItemGroup>
@@ -133,7 +133,7 @@
     <ClCompile Include="src\Goemetry.cpp" />
     <ClCompile Include="src\Properties.cpp" />
     <ClCompile Include="src\string_utils.cpp" />
-    <ClCompile Include="src\Timer.cpp" />
+    <ClCompile Include="src\timer.cpp" />
     <ClCompile Include="src\Translator.cpp" />
     <ClCompile Include="src\Utils.cpp" />
   </ItemGroup>
