--- a/Utils/Utils.cbp
+++ b/Utils/Utils.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="clang" />
 		<Build>
 			<Target title="Debug Win32">
-				<Option output="Utils" prefix_auto="1" extension_auto="1" />
+				<Option output="../Debug/Utils" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option type="2" />
 				<Option compiler="gcc" />
@@ -23,7 +23,7 @@
 				</Linker>
 			</Target>
 			<Target title="Release Win32">
-				<Option output="Utils" prefix_auto="1" extension_auto="1" />
+				<Option output="../Release/Utils" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option type="2" />
 				<Option compiler="clang" />
