--- a/Utils/Utils.cbp
+++ b/Utils/Utils.cbp
@@ -4,10 +4,10 @@
 	<Project>
 		<Option title="Utils" />
 		<Option pch_mode="2" />
-		<Option compiler="clang" />
+		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug Win32">
-				<Option output="../Debug/Utils" prefix_auto="1" extension_auto="1" />
+				<Option output="../../URemoteServer/lib/Debug/Utils" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option type="2" />
 				<Option compiler="gcc" />
@@ -23,10 +23,10 @@
 				</Linker>
 			</Target>
 			<Target title="Release Win32">
-				<Option output="../Release/Utils" prefix_auto="1" extension_auto="1" />
+				<Option output="../../URemoteServer/lib/Release/Utils" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="" />
 				<Option type="2" />
-				<Option compiler="clang" />
+				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
 					<Add option="-DWIN32" />
@@ -60,8 +60,6 @@
 		<Unit filename="src/Properties.h" />
 		<Unit filename="src/Singleton.cpp" />
 		<Unit filename="src/Singleton.h" />
-		<Unit filename="src/timer.cpp" />
-		<Unit filename="src/timer.h" />
 		<Unit filename="src/Translator.cpp" />
 		<Unit filename="src/Translator.h" />
 		<Unit filename="src/Utils.cpp" />
@@ -83,6 +81,8 @@
 		<Unit filename="src/platform_config.h" />
 		<Unit filename="src/string_utils.cpp" />
 		<Unit filename="src/string_utils.h" />
+		<Unit filename="src/timer.cpp" />
+		<Unit filename="src/timer.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
