--- a/Utils/Utils.vcxproj
+++ b/Utils/Utils.vcxproj
@@ -72,7 +72,8 @@
       </AdditionalDependencies>
     </Link>
     <Lib>
-      <AdditionalLibraryDirectories>./lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>
+      </AdditionalLibraryDirectories>
       <TargetMachine>MachineX86</TargetMachine>
     </Lib>
   </ItemDefinitionGroup>
@@ -92,7 +93,8 @@
       </AdditionalDependencies>
     </Link>
     <Lib>
-      <AdditionalLibraryDirectories>./lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>
+      </AdditionalLibraryDirectories>
       <TargetMachine>MachineX86</TargetMachine>
     </Lib>
   </ItemDefinitionGroup>
