Migrated to clion/biicode

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
-Debug
-Release
-include
-lib
-ipch
+# MacOS garbage
+.DS_Store
+
+# temp files
+*~*
+
+# Intellij project files
+.idea/
+
+# VS project files
 *.suo
 *.sdf
 *.opensdf
@@ -12,3 +17,17 @@ ipch
 *.layout
 .directory
 .objs
+Debug
+Release
+include
+lib
+ipch
+
+# Biicode
+/bii/
+/cmake/
+/build/
+/bin/
+/deps/
+/blocks/
+settings.pyc
