--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,22 @@ include(biicode/boost/setup)
 
 #Setup Boost and build (if needed) the required Boost components
 #Since lambda is header-only, there are no components to build and find
-bii_find_boost()
+#bii_find_boost()
 #bii_find_boost(COMPONENTS system filesystem REQUIRED)
+set(Boost_USE_STATIC_LIBS ON)
+bii_find_boost(COMPONENTS system filesystem REQUIRED)
 
 #Add Boost headers to the block include directories
-target_include_directories(${BII_BLOCK_TARGET} INTERFACE ${Boost_INCLUDE_DIRS})
+target_link_libraries(${BII_BLOCK_TARGET} INTERFACE ${Boost_LIBRARIES})
 
-INCLUDE(biicode/cmake/tools) # Include tools.cmake file from cmake block from the "biicode" user
-ACTIVATE_CPP11(INTERFACE ${BII_BLOCK_TARGET})
+
+#INCLUDE(biicode/cmake/tools) # Include tools.cmake file from cmake block from the "biicode" user
+#ACTIVATE_CPP11(INTERFACE ${BII_BLOCK_TARGET})
+IF(APPLE)
+     TARGET_COMPILE_OPTIONS(${BII_BLOCK_TARGET} INTERFACE "-std=c++11 -stdlib=libc++")
+ELSEIF (WIN32 OR UNIX)
+     TARGET_COMPILE_OPTIONS(${BII_BLOCK_TARGET} INTERFACE "-std=c++11")
+ENDIF(APPLE)
 
 # You can safely delete lines from here...
 
