- Fixed fs_utils::build_path() for paths with a leading slash - Fixed unit tests - Changed C++11 implementation in CMakeLists.txt => ACTIVATE_CPP11(INTERFACE ${BII_BLOCK_TARGET})

--- a/biicode.conf
+++ b/biicode.conf
@@ -2,6 +2,7 @@
 
 [requirements]
 	 biicode/boost: 7
+	 biicode/cmake: 3
 	 google/gtest: 10
 
 [parent]
@@ -17,7 +18,7 @@
     # hello.h + hello_imp.cpp hello_imp2.cpp
     # *.h + *.cpp
     test_suites/test_suites.cpp + test_suites/test_file_utils.cpp
-    test_suites/test_suites.cpp + test_suites/test_fs_list_files.cpp
+    test_suites/test_suites.cpp + test_suites/test_list_files.cpp
     test_suites/test_suites.cpp + test_suites/test_path_build_1.cpp
     test_suites/test_suites.cpp + test_suites/test_path_build_2.cpp
     test_suites/test_suites.cpp + test_suites/test_string_utils.cpp
