--- a/biicode.conf
+++ b/biicode.conf
@@ -26,7 +26,7 @@
 [mains]
     # Manual adjust of files that define an executable
     # !main.cpp  # Do not build executable from this file
-    # main2.cpp # Build it (it doesnt have a main() function, but maybe it includes it)
+    # main2.cpp # Build it (it doesn't have a main() function, but maybe it includes it)
 
 [tests]
     # Manual adjust of files that define a CTest test
