Renamed test_suites directory and added a timeer test.

--- a/biicode.conf
+++ b/biicode.conf
@@ -17,11 +17,12 @@
     # Manual adjust file implicit dependencies, add (+), remove (-), or overwrite (=)
     # hello.h + hello_imp.cpp hello_imp2.cpp
     # *.h + *.cpp
-    test_suites/test_suites.cpp + test_suites/test_file_utils.cpp
-    test_suites/test_suites.cpp + test_suites/test_list_files.cpp
-    test_suites/test_suites.cpp + test_suites/test_path_build_1.cpp
-    test_suites/test_suites.cpp + test_suites/test_path_build_2.cpp
-    test_suites/test_suites.cpp + test_suites/test_string_utils.cpp
+    test/test_suites.cpp + test/test_file_utils.cpp
+    test/test_suites.cpp + test/test_list_files.cpp
+    test/test_suites.cpp + test/test_path_build_1.cpp
+    test/test_suites.cpp + test/test_path_build_2.cpp
+    test/test_suites.cpp + test/test_string_utils.cpp
+    test/test_suites.cpp + test/test_timer.cpp
 
 [mains]
     # Manual adjust of files that define an executable
@@ -31,7 +32,7 @@
 [tests]
     # Manual adjust of files that define a CTest test
     # test/* pattern to evaluate this test/ folder sources like tests
-    test_suites/test_suites.cpp
+    test/test_suites.cpp
 
 [hooks]
     # These are defined equal to [dependencies],files names matching bii*stage*hook.py
