Created test for logger component.

--- a/biicode.conf
+++ b/biicode.conf
@@ -19,6 +19,7 @@
     # *.h + *.cpp
     test/test_suites.cpp + test/test_file_utils.cpp
     test/test_suites.cpp + test/test_list_files.cpp
+    test/test_suites.cpp + test/test_logger.cpp
     test/test_suites.cpp + test/test_path_build_1.cpp
     test/test_suites.cpp + test/test_path_build_2.cpp
     test/test_suites.cpp + test/test_string_utils.cpp
