--- a/biicode.conf
+++ b/biicode.conf
@@ -3,6 +3,7 @@
 [requirements]
 	 biicode/boost: 8
 	 biicode/cmake: 3
+	 cyrillrx/logger: 0
 	 google/gtest: 10
 
 [parent]
@@ -19,7 +20,6 @@
     # *.h + *.cpp
     test/test_suites.cpp + test/test_file_utils.cpp
     test/test_suites.cpp + test/test_list_files.cpp
-    test/test_suites.cpp + test/test_logger.cpp
     test/test_suites.cpp + test/test_path_build_1.cpp
     test/test_suites.cpp + test/test_path_build_2.cpp
     test/test_suites.cpp + test/test_string_utils.cpp
@@ -44,6 +44,7 @@
     # Mapping of include patterns to external blocks
     # hello*.h: user3/depblock  # includes will be processed as user3/depblock/hello*.h
     gtest/*.h: google/gtest/include
+	logger/*.h: cyrillrx/logger/src
 
 [data]
     # Manually define data files dependencies, that will be copied to bin for execution
