Implemented logger and core modules

--- a/biicode.conf
+++ b/biicode.conf
@@ -3,6 +3,8 @@
 [requirements]
 	 biicode/boost: 8
 	 biicode/cmake: 3
+	 cyrillrx/logger: 0
+	 cyrillrx/core: 0
 	 google/gtest: 10
 
 [parent]
@@ -19,11 +21,11 @@
     # *.h + *.cpp
     test/test_suites.cpp + test/test_file_utils.cpp
     test/test_suites.cpp + test/test_list_files.cpp
-    test/test_suites.cpp + test/test_logger.cpp
     test/test_suites.cpp + test/test_path_build_1.cpp
     test/test_suites.cpp + test/test_path_build_2.cpp
     test/test_suites.cpp + test/test_string_utils.cpp
     test/test_suites.cpp + test/test_timer.cpp
+    test/test_suites.cpp + test/test_geometry.cpp
 
 [mains]
     # Manual adjust of files that define an executable
@@ -43,6 +45,8 @@
 [includes]
     # Mapping of include patterns to external blocks
     # hello*.h: user3/depblock  # includes will be processed as user3/depblock/hello*.h
+	core/*.h: cyrillrx/core/include
+	logger/*.h: cyrillrx/logger/src
     gtest/*.h: google/gtest/include
 
 [data]
