Implemented properties unit tests

--- a/biicode.conf
+++ b/biicode.conf
@@ -25,7 +25,7 @@
     test/test_suites.cpp + test/test_path_build_2.cpp
     test/test_suites.cpp + test/test_string_utils.cpp
     test/test_suites.cpp + test/test_timer.cpp
-    test/test_suites.cpp + test/test_geometry.cpp
+    test/test_suites.cpp + test/test_others.cpp
 
 [mains]
     # Manual adjust of files that define an executable
@@ -48,7 +48,6 @@
 	core/*.h: cyrillrx/core/include
 	logger/*.h: cyrillrx/logger/src
     gtest/*.h: google/gtest/include
-	logger/*.h: cyrillrx/logger/src
 
 [data]
     # Manually define data files dependencies, that will be copied to bin for execution
