Fixed logger global definition

--- a/biicode.conf
+++ b/biicode.conf
@@ -19,13 +19,13 @@
     # Manual adjust file implicit dependencies, add (+), remove (-), or overwrite (=)
     # hello.h + hello_imp.cpp hello_imp2.cpp
     # *.h + *.cpp
+    test/test_suites.cpp + test/test_all.cpp
     test/test_suites.cpp + test/test_file_utils.cpp
     test/test_suites.cpp + test/test_list_files.cpp
     test/test_suites.cpp + test/test_path_build_1.cpp
     test/test_suites.cpp + test/test_path_build_2.cpp
     test/test_suites.cpp + test/test_string_utils.cpp
     test/test_suites.cpp + test/test_timer.cpp
-    test/test_suites.cpp + test/test_others.cpp
 
 [mains]
     # Manual adjust of files that define an executable
